objects/docebo_v3__Session__c.object
<CustomObject>
    <description>Represents Docebo&apos;s sessions</description>
    <fields>
        <fullName>docebo_v3__Course__c</fullName>
        <description>Session&apos; Course</description>
        <label>Course</label>
        <referenceTo>docebo_v3__Course__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Date_End__c</fullName>
        <label>Date End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Date_Start__c</fullName>
        <label>Date Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the session has been deleted from the LMS</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__DeletionDate__c</fullName>
        <label>DeletionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Name__c</fullName>
        <description>The session name</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__SessionId__c</fullName>
        <description>The LMS session Id.</description>
        <externalId>true</externalId>
        <label>Session External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__SessionType__c</fullName>
        <description>Session course type</description>
        <formula>TEXT(docebo_v3__Course__r.docebo_v3__Type__c)</formula>
        <label>Session Type</label>
        <type>Text</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>NAME</columns>
        <columns>docebo_v3__Course__c</columns>
        <columns>docebo_v3__Name__c</columns>
        <columns>docebo_v3__SessionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>docebo_v3__CourseMustBeCompatibleWithSessions</fullName>
        <active>true</active>
        <description>This makes sure that the session course has a type wich allows sessions (e.g. webinar and ilt classrooms)</description>
        <errorConditionFormula>NOT(
  ISPICKVAL(docebo_v3__Course__r.docebo_v3__Type__c, &quot;webinar&quot;) 
  || ISPICKVAL(docebo_v3__Course__r.docebo_v3__Type__c, &quot;classroom&quot;)
)</errorConditionFormula>
        <errorDisplayField>docebo_v3__Course__c</errorDisplayField>
        <errorMessage>Session course must be of type &apos;webinar&apos; or &apos;classroom&apos;</errorMessage>
    </validationRules>
</CustomObject>